Make lighthouse happy

--- a/index.html
+++ b/index.html
@@ -44,49 +44,49 @@ description: An easy way to perform background processing in .NET and .NET Core 
                     </ol>
 
                     <!-- Wrapper for slides -->
-                    <div class="carousel-inner" role="listbox">
+                    <div class="carousel-inner" role="listbox" aria-label="Dashboard UI Screenshots">
                         <div class="item active">
-                            <a href="{{ site.cdn }}/img/ui/dashboard.png" data-lightbox="Screenshots" data-title="Dashboard">
+                            <a href="{{ site.cdn }}/img/ui/dashboard.png" role="option" data-lightbox="Screenshots" data-title="Dashboard">
                                 <img src="{{ site.cdn }}/img/ui/dashboard-sm.png" width="450" height="267" alt="Dashboard">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="{{ site.cdn }}/img/ui/queues.png" data-lightbox="Screenshots" data-title="Queue List">
+                            <a href="{{ site.cdn }}/img/ui/queues.png" role="option" data-lightbox="Screenshots" data-title="Queue List">
                                 <img src="{{ site.cdn }}/img/ui/queues-sm.png" width="450" height="267" alt="Queue List">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="{{ site.cdn }}/img/ui/job-details.png" data-lightbox="Screenshots" data-title="Job Details">
+                            <a href="{{ site.cdn }}/img/ui/job-details.png" role="option" data-lightbox="Screenshots" data-title="Job Details">
                                 <img src="{{ site.cdn }}/img/ui/job-details-sm.png" width="450" height="267" alt="Job Details">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="{{ site.cdn }}/img/ui/retries.png" data-lightbox="Screenshots" data-title="Retry List">
+                            <a href="{{ site.cdn }}/img/ui/retries.png" role="option" data-lightbox="Screenshots" data-title="Retry List">
                                 <img src="{{ site.cdn }}/img/ui/retries-sm.png" width="450" height="267" alt="Retry List">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="{{ site.cdn }}/img/ui/failed-jobs.png" data-lightbox="Screenshots" data-title="Failed Job List">
+                            <a href="{{ site.cdn }}/img/ui/failed-jobs.png" role="option" data-lightbox="Screenshots" data-title="Failed Job List">
                                 <img src="{{ site.cdn }}/img/ui/failed-jobs-sm.png" width="450" height="267" alt="Failed Job List">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="{{ site.cdn }}/img/ui/recurring-jobs.png" data-lightbox="Screenshots" data-title="Recurring Jobs">
+                            <a href="{{ site.cdn }}/img/ui/recurring-jobs.png" role="option" data-lightbox="Screenshots" data-title="Recurring Jobs">
                                 <img src="{{ site.cdn }}/img/ui/recurring-jobs-sm.png" width="450" height="267" alt="Recurring Jobs">
                             </a>
                         </div>          
                         <div class="item">
-                            <a href="{{ site.cdn }}/img/ui/batches.png" data-lightbox="Screenshots" title="Batch List">
+                            <a href="{{ site.cdn }}/img/ui/batches.png" role="option" data-lightbox="Screenshots" title="Batch List">
                                 <img src="{{ site.cdn }}/img/ui/batches-sm.png" width="450" height="267" alt="Batch List">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="{{ site.cdn }}/img/ui/batch-details.png" data-lightbox="Screenshots" title="Batch Details">
+                            <a href="{{ site.cdn }}/img/ui/batch-details.png" role="option" data-lightbox="Screenshots" title="Batch Details">
                                 <img src="{{ site.cdn }}/img/ui/batch-details-sm.png" width="450" height="267" alt="Batch Details">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="{{ site.cdn }}/img/ui/batch-jobs.png" data-lightbox="Screenshots" title="Batch Jobs">
+                            <a href="{{ site.cdn }}/img/ui/batch-jobs.png" role="option" data-lightbox="Screenshots" title="Batch Jobs">
                                 <img src="{{ site.cdn }}/img/ui/batch-jobs-sm.png" width="450" height="267" alt="Batch Jobs">
                             </a>
                         </div>
@@ -179,14 +179,14 @@ description: An easy way to perform background processing in .NET and .NET Core 
             <h3 style="margin-top: 5px;">Courses</h3>
             <div class="div-thumbnail">
                 <div id="carousel-courses" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner" role="listbox">
+                    <div class="carousel-inner" role="listbox" aria-label="Courses">
                         <div class="item active">
-                            <a href="https://www.udemy.com/course/building-background-services-in-net-with-hangfire/?referralCode=ADE705B8BB4A44749A7D" target="_blank">
+                            <a href="https://www.udemy.com/course/building-background-services-in-net-with-hangfire/?referralCode=ADE705B8BB4A44749A7D" target="_blank" role="option">
                                 <img src="{{ site.cdn }}/img/udemy.png" width="252" height="142" alt="Udemy Course">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="https://www.pluralsight.com/courses/simplified-dotnet-background-tasks-hangfire" target="_blank">
+                            <a href="https://www.pluralsight.com/courses/simplified-dotnet-background-tasks-hangfire" target="_blank" role="option">
                                 <img src="{{ site.cdn }}/img/pluralsight.png" width="252" height="142" alt="Pluralsight Course">
                             </a>
                         </div>                        
