Switch shields.hangfire.io to badges.hangfire.io

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@ description: An easy way to perform background processing in .NET and .NET Core 
                 </p>
                 <p>   
                 <a href="https://www.nuget.org/packages/Hangfire/" target="_blank">
-                    <img src="https://shields.hangfire.io/nuget/v/Hangfire.Core.svg?label=release" alt="Latest release"></a>
+                    <img src="https://badges.hangfire.io/nuget/v/Hangfire.Core.svg?label=release" alt="Latest release"></a>
                 &nbsp;
                 <a href="https://www.nuget.org/packages/Hangfire.Core/" target="_blank">
-                    <img src="https://shields.hangfire.io/nuget/dt/Hangfire.Core.svg?style=flat" alt="Package downloads"></a>
+                    <img src="https://badges.hangfire.io/nuget/dt/Hangfire.Core.svg?style=flat" alt="Package downloads"></a>
                 &nbsp;
-                <a href="https://github.com/HangfireIO/Hangfire/stargazers" target="_blank"><img src="https://shields.hangfire.io/github/stars/HangfireIO/Hangfire.svg?style=social" alt="Stars on GitHub"></a>
+                <a href="https://github.com/HangfireIO/Hangfire/stargazers" target="_blank"><img src="https://badges.hangfire.io/github/stars/HangfireIO/Hangfire.svg?style=social" alt="Stars on GitHub"></a>
                 </p>
             </div>
             <div class="col-md-5">
