--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ description: An easy way to perform background processing in .NET and .NET Core 
 <div class="jumbotron">
     <div class="container">
         <div class="row" itemscope itemtype="http://schema.org/SoftwareApplication">
-            <div class="col-md-7">
-                <h1 itemprop="name">Hangfire</h1>
+            <div class="col-md-7" style="padding: 10px 0;">
+                <img src="{{ site.cdn }}/logo.svg" alt="Hangfire Logo" height="74" style="margin-left: -5px; margin-bottom:5px;">
                 <p style="margin-bottom: 10px;">
                     An easy way to perform background processing in .NET and .NET Core applications.
                     No Windows Service or separate process required.
