--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
 <div class="jumbotron">
     <div class="container">
         <div class="row" itemscope itemtype="http://schema.org/SoftwareApplication">
-            <div class="col-md-7" style="padding: 15px 0;">
+            <div class="col-md-7" style="padding-top: 15px;">
                 <img src="{{ site.cdn }}/logo.svg" alt="Hangfire Logo" height="64" style="margin-left: -5px; margin-bottom:5px;">
                 <p style="margin-bottom: 10px;">
                     An easy way to perform background processing in .NET and .NET Core applications.
